--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#03A9F4</color>
+    <color name="homepageLightBackground">#C9D2FF</color>
 </resources>
