--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/drawerLayout"
+    tools:openDrawer="start"
+    android:background="@color/homepageDarkBackground">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/homepageDarkBackground"
+            android:scrollbars="vertical">
+
+
+                <TextView
+                    android:id="@+id/textYourCurrentCourses"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/resume_learning"
+                    android:textColor="@color/colorWhite"
+                    android:gravity="start"
+                    android:textSize="14sp"
+                    android:typeface="sans"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="24dp"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/currentCourseListView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="horizontal"
+                    android:layout_below="@id/textYourCurrentCourses"
+                    android:layout_margin="5dp"/>
+
+
+
+
+                <TextView
+                    android:id="@+id/textRecommendedCoursesList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:layout_marginStart="15dp"
+                    android:text="@string/recommended_for_you"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14sp"
+                    android:typeface="sans"
+                    android:layout_below="@id/currentCourseListView"
+                    android:layout_marginTop="48dp"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recommendedCourseListView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="horizontal"
+                    android:layout_below="@id/textRecommendedCoursesList"/>
+
+
+
+                <TextView
+                    android:id="@+id/textExploreCoursesList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:layout_marginStart="15dp"
+                    android:text="@string/explore"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="14sp"
+                    android:typeface="sans"
+                    android:layout_marginTop="24dp"
+                    android:layout_below="@id/recommendedCourseListView"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/exploreCourseListView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="horizontal"
+                    android:layout_below="@id/textExploreCoursesList"
+                    android:layout_margin="5dp"/>
+
+        </RelativeLayout>
+    </ScrollView>
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_layout"
+        app:menu="@menu/home_drawer_menu"
+        android:background="@color/homepageDarkBackground"
+        app:itemTextColor="@color/colorWhite"
+        app:itemIconTint="@color/colorWhite"/>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
