--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#063CDF</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlue">#03A9F4</color>
-    <color name="homepageLightBackground">#C9D2FF</color>
+    <color name="homepageLightBackground">#F6FF97</color>
+    <color name="homepageDarkBackground">#1A1A18</color>
 </resources>
