--- a/app/src/main/res/drawable-anydpi/add_icon.xml
+++ b/app/src/main/res/drawable-anydpi/add_icon.xml
@@ -3,14 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFF00"
+    android:tint="#000000"
     android:alpha="0.8">
-  <group android:scaleX="1.2"
-      android:scaleY="1.2"
-      android:translateX="-2.4"
-      android:translateY="-2.4">
+  <group android:scaleX="1.7142857"
+      android:scaleY="1.7142857"
+      android:translateX="-8.571428"
+      android:translateY="-8.571428">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z"/>
+        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
   </group>
 </vector>
