--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLayoutSetupMaps"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/colorYellow"
         android:text="@string/why_should_i_share_my_location"
         android:textStyle="italic"
         android:gravity="center"
@@ -128,7 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/contactNumberHolder"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/colorYellow"
         android:text="@string/we_never_share_these_details_without_your_permission"
         android:textStyle="italic"
         android:gravity="center"
@@ -137,6 +137,18 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_centerInParent="true"/>
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="108dp"
+        android:progress="67"
+        android:progressTint="@color/colorRed"
+        android:progressBackgroundTint="@color/colorYellow" />
 
     <Button
         android:id="@+id/skipSetup3"
