setup page layouts updated

--- a/app/src/main/res/layout/activity_setup_2.xml
+++ b/app/src/main/res/layout/activity_setup_2.xml
@@ -39,7 +39,7 @@
         android:layout_below="@id/userNameHolder"
         android:layout_centerInParent="true"
         android:layout_marginTop="48dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/default_person_image"
         app:civ_border_width="3dp"
         app:civ_border_color="@color/colorWhite"
         android:id="@+id/profilePhoto"/>
@@ -50,7 +50,7 @@
         android:layout_below="@id/profilePhoto"
         android:layout_marginTop="10dp"
         android:text="@string/add_an_optional_profile_photo"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/colorYellow"
         android:layout_centerInParent="true"
         android:textSize="@dimen/text_margin"
         android:gravity="center"
@@ -78,8 +78,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="108dp"
         android:progress="33"
-        android:progressTint="@color/colorRed"
-        android:progressBackgroundTint="@color/colorYellow" />
+        android:progressTint="@color/colorYellow"
+        android:progressBackgroundTint="@color/colorWhite" />
 
     <Button
         android:id="@+id/skipSetup2"
