--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background">
 
     <TextView
@@ -25,44 +26,20 @@
         android:layout_below="@id/textSetupTitle1"
         />
 
-    <Button
-        android:id="@+id/btnAcademicsSelector"
+    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/academics"
-        android:drawableStart="@drawable/add_icon"
-        android:paddingStart="20dp"
-        android:background="@drawable/btn_multi_select"
-        android:layout_marginTop="108dp"
+        android:background="@drawable/text_view_login"
         android:layout_below="@id/textSetupTitle2"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"/>
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:id="@+id/searchInterests"/>
 
-    <Button
-        android:id="@+id/btnCoCurricularSelector"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/co_curricular"
-        android:drawableStart="@drawable/add_icon"
-        android:paddingStart="20dp"
-        android:background="@drawable/btn_multi_select"
-        android:layout_marginTop="36dp"
-        android:layout_below="@id/btnAcademicsSelector"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"/>
-
-    <Button
-        android:id="@+id/btnSportsSelector"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sports"
-        android:drawableStart="@drawable/add_icon"
-        android:paddingStart="20dp"
-        android:background="@drawable/btn_multi_select"
-        android:layout_marginTop="36dp"
-        android:layout_below="@id/btnCoCurricularSelector"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"/>
+        android:layout_below="@id/searchInterests"
+        android:layout_margin="@dimen/text_margin"
+        android:id="@+id/listInterests"/>
 
     <ProgressBar
         android:layout_width="match_parent"
@@ -73,8 +50,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="108dp"
         android:progress="0"
-        android:progressTint="@color/colorRed"
-        android:progressBackgroundTint="@color/colorYellow"/>
+        android:progressTint="@color/colorYellow"
+        android:progressBackgroundTint="@color/colorWhite"/>
 
         <Button
             android:id="@+id/skipSetup1"
