--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/drawer_layout"
     tools:openDrawer="start"
     android:background="@color/homepageDarkBackground">
 
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content"
             android:background="@color/homepageDarkBackground"
             android:scrollbars="vertical">
-
 
                 <TextView
                     android:id="@+id/textYourCurrentCourses"
@@ -42,9 +41,6 @@
                     android:layout_below="@id/textYourCurrentCourses"
                     android:layout_margin="5dp"/>
 
-
-
-
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
                     android:layout_width="match_parent"
@@ -65,8 +61,6 @@
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:layout_below="@id/textRecommendedCoursesList"/>
-
-
 
                 <TextView
                     android:id="@+id/textExploreCoursesList"
@@ -94,7 +88,6 @@
         </RelativeLayout>
     </ScrollView>
 
-
     <com.google.android.material.navigation.NavigationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -102,9 +95,9 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_layout"
         app:menu="@menu/home_drawer_menu"
+        android:id="@+id/nav_view"
         android:background="@color/homepageDarkBackground"
         app:itemTextColor="@color/colorWhite"
         app:itemIconTint="@color/colorWhite"/>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
