--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -26,7 +26,7 @@
         android:layout_below="@id/textSetupTitle1"
         />
 
-    <androidx.appcompat.widget.SearchView
+    <SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/text_view_login"
@@ -37,9 +37,19 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/searchInterests"
+        android:layout_below="@id/addInterest"
         android:layout_margin="@dimen/text_margin"
         android:id="@+id/listInterests"/>
+
+    <Button
+        android:id="@+id/addInterest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/searchInterests"
+        android:layout_marginTop="27dp"
+        android:gravity="center"
+        android:text="Add Interest" />
 
     <ProgressBar
         android:layout_width="match_parent"
