--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_layout"
         app:menu="@menu/home_drawer_menu"
-        android:id="@+id/nav_view"
+        android:id="@+id/navbar"
         android:background="@color/homepageDarkBackground"
         app:itemTextColor="@color/colorWhite"
         app:itemIconTint="@color/colorWhite"/>
