--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -42,7 +42,8 @@
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/text_view_login"
                 android:padding="10dp"
-                android:layout_margin="@dimen/text_margin"/>
+                android:layout_margin="@dimen/text_margin"
+                android:id="@+id/add_course_name"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -53,7 +54,8 @@
                 android:background="@drawable/text_view_login"
                 android:padding="10dp"
                 android:layout_margin="@dimen/text_margin"
-                android:textColor="@color/colorWhite"/>
+                android:textColor="@color/colorWhite"
+                android:id="@+id/add_course_description"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,7 +73,8 @@
                     android:textColor="@color/colorWhite"
                     android:background="@drawable/text_view_login"
                     android:padding="10dp"
-                    android:layout_weight="50" />
+                    android:layout_weight="50"
+                    android:id="@+id/add_course_duration"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -96,6 +99,7 @@
                 android:padding="5dp">
 
                 <RadioButton
+                    android:id="@+id/add_course_online"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
@@ -105,6 +109,7 @@
                     android:text="@string/online"/>
 
                 <RadioButton
+                    android:id="@+id/add_course_offline"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
@@ -126,6 +131,7 @@
                 android:padding="5dp">
 
                 <RadioButton
+                    android:id="@+id/add_course_group"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
@@ -135,6 +141,7 @@
                     android:text="@string/grouped_classes"/>
 
                 <RadioButton
+                    android:id="@+id/add_course_individual"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="50"
@@ -206,7 +213,8 @@
                 android:background="@drawable/text_view_login"
                 android:padding="10dp"
                 android:layout_margin="@dimen/text_margin"
-                android:textColor="@color/colorWhite"/>
+                android:textColor="@color/colorWhite"
+                android:id="@+id/add_course_num_batches"/>
 
             <!-- Available Days And Time Slotting here -->
 
