--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,6 +84,11 @@
                     android:orientation="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
                     android:layout_margin="5dp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:id="@+id/profilePhotoTest"/>
 
         </RelativeLayout>
     </ScrollView>
@@ -95,7 +100,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_layout"
         app:menu="@menu/home_drawer_menu"
-        android:id="@+id/navbar"
+        android:id="@+id/nav_view"
         android:background="@color/homepageDarkBackground"
         app:itemTextColor="@color/colorWhite"
         app:itemIconTint="@color/colorWhite"/>
